--- a/docs/CSS/projeto11/PousadaSegredo/css/estilo.css
+++ b/docs/CSS/projeto11/PousadaSegredo/css/estilo.css
@@ -54,6 +54,7 @@ body {
     width: 100%;
     background-image: url("../assets/img-fundo.jpg");
     height: 100vh;
+    padding: 0 20px;
     background-position: center;
     background-repeat: cover;
 
