--- a/docs/CSS/projeto14/AgenciaDeViagens/estilo.css
+++ b/docs/CSS/projeto14/AgenciaDeViagens/estilo.css
@@ -259,7 +259,7 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 100px;
+    margin: 0 auto;
 }
 
 .box-centraliza div {
